# wavemaker

./: .gitignore  CHANGES_SUMMARY.md  Model.py  PARAMETER_UPDATE_FIX_DOCUMENTATION.md  README.md  README_COMPLETE_PIPELINE.md  README_DOCUMENTATION_INDEX.md  README_PARAMETER_FLOW.md  README_PARAMETER_REFERENCE.md  README_PDF_GENERATION.md  README_VERIFICATION_SYSTEM.md  generate_all_pdfs.bat  generate_pdf.py  pdf_requirements.txt  pyproject.toml  requirements.txt  style.py
Presets/: Preset 1-Big Wave Demo2.csv  massive.csv
analytics/: 2022-08-12.txt  2022-08-17.txt  Info.txt
control_home/: ControlHome.py
database/: database.py
define_motors/: DefineMotors.py
modules/: eip.py
preset_options/: PresetOptions.py
testing/: parameter_update_fix_test.py  parameter_update_test.py  test_per_set_parameters.py
