[project]
name = "wavemaker"
version = "0.2.0"
description = "WaveMaker GUI for controlling wave-making pistons"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pymongo>=4.0.0",
]

[project.optional-dependencies]
pdf = [
    "markdown>=3.4.0",
    "weasyprint>=60.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    "analytics",
]

[tool.pytest.ini_options]
testpaths = ["testing"]
python_files = ["*test.py", "*Test.py"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]
